[package]
name = "rtk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtk"
path = "bin/main.rs"

[lib]
name = "rtk"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.26.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_qs = "0.12.0"
url = "2.3.1"
